updates to links

--- a/content/get-involved.html
+++ b/content/get-involved.html
@@ -41,7 +41,7 @@ weight: 500
         </span>
         Slack Chat
       </a>
-      <a href="https://freenode.net/kb/answer/registration">
+      <a href="irc://chat.freenode.net/#dc801">
         <span class="icon is-medium">
           <i class="fa fa-hashtag"></i>
         </span>
@@ -51,15 +51,15 @@ weight: 500
         <span class="icon is-medium">
           <i class="fab fa-github"></i>
         </span>
-        Commit
+        Commit Code
         </a>
       <a href="http://www.youtube.com/c/801LabsSaltLakeCity">
         <span class="icon is-medium">
           <i class="fab fa-youtube"></i>
         </span>
-        Watch classes
+        Watch Classes
       </a>
-      <a href="#">
+      <a href="https://fb.me/801labs">
         <span class="icon is-medium">
           <i class="fab fa-facebook"></i>
         </span>
