--- a/content/get-involved.html
+++ b/content/get-involved.html
@@ -17,66 +17,7 @@ weight: 500
 
     <h1 class="title">1. Start following our social media</h1>
     <div class="icons">
-      <a href="https://g.page/801labs?share">
-        <span class="icon is-medium">
-          <i class="fa fa-location-arrow"></i>
-        </span>
-        Go there
-      </a>
-      <a href="mailto:board@801labs.org">
-        <span class="icon is-medium">
-          <i class="fas fa-envelope"></i>
-        </span>
-        Email us
-      </a>
-      <a href="https://www.meetup.com/801labs/">
-        <span class="icon is-medium">
-          <i class="fab fa-meetup"></i>
-        </span>
-        Meet up
-      </a>
-      <a href="https://slack.801labs.org">
-        <span class="icon is-medium">
-          <i class="fab fa-slack"></i>
-        </span>
-        Slack Chat
-      </a>
-      <a href="irc://chat.freenode.net/#dc801">
-        <span class="icon is-medium">
-          <i class="fa fa-hashtag"></i>
-        </span>
-        IRC chat
-      </a>
-      <a href="https://github.com/801labs/">
-        <span class="icon is-medium">
-          <i class="fab fa-github"></i>
-        </span>
-        Commit Code
-        </a>
-      <a href="http://www.youtube.com/c/801LabsSaltLakeCity">
-        <span class="icon is-medium">
-          <i class="fab fa-youtube"></i>
-        </span>
-        Watch Classes
-      </a>
-      <a href="https://fb.me/801labs">
-        <span class="icon is-medium">
-          <i class="fab fa-facebook"></i>
-        </span>
-        FaceBook
-      </a>
-      <a href="https://twitter.com/801labs">
-        <span class="icon is-medium">
-          <i class="fab fa-twitter"></i>
-        </span>
-        Tweet at us
-      </a>
-      <a href="https://research.801labs.org/">
-        <span class="icon is-medium">
-          <i class="fas fa-flask"></i>
-        </span>
-        Read our research
-      </a>
+      {{< socials >}}
     </div>
 
     <h1 class="title">2. Join our <a href="https://slack.801labs.org">
