fixed get involved text

--- a/content/get-involved.html
+++ b/content/get-involved.html
@@ -56,13 +56,14 @@ weight: 500
 
     <section class="section has-text-centered">
       <div class="content">
-        <h1 class="title">FAQs: Donate + Volunteer</h1>
+        <h1 class="title">FAQs: Volunteer + Donate</h1>
         <p><a href="#">
           <span class="icon is-medium">
             <i class="fab fa-paypal"></i>
           </span>
           One Time Through PayPal
         </a> | Subscribe | Stuff | Classes | Marketing | More</p>
+        <p>Regardless if you use the space or not, thank you for supporting your local hacker community.</p>
       </div>
     </section>
 
@@ -89,21 +90,29 @@ weight: 500
       </div>
       <div class="column has-text-left">
         <div class="content">
-        <h3>What can I do to help at the space?</h3>
-    Answer: We have a list of ongoing projects to improve the space on our get involved page. If there’s a project you would like to participate in to make the hackerspace better, please contact the committee volunteers listed under that project to see what you can do.
-<h3>I would like to teach a class, what should I do?</h3>
-    Answer: You can reach out to us on slack and let us know, or you can use the forms on the get involved page to submit your class idea so we can make it happen. We’re always looking for more people who would like to teach classes or run events.
-<h3>Your website looks like a pile of garbage. Can I update it to make it better?</h3>
-    Answer: Our website source code is freely available on GitHub for anyone to fork, edit, and submit a pull request. If you’d like to see something new or different on the website, feel free to submit changes for review by the volunteers who maintain it.
-<h3>What are the responsibilities of key holding volunteers?</h3>
-    Answer:
-Key holding volunteers will be responsible for opening the space to the public.
-Greet people as they come into the space or delegate that to another volunteer.
-Ensure that the space is being used responsibly.
-Know how to use any equipment in the space that is being used.  Keep equipment locked otherwise.
-Politely enforce the 801 Labs code of conduct.
-<h3>I am an active volunteer, how can I get a key to the space?</h3>
-    Answer: As an active volunteer if you would like to take on the added responsibility of being a key holding volunteer, contact board@801labs.org.
+        <h3>What happens to financial donations?</h3>
+    Because 801labs is a 100% volunteer run organization, there is very little administrative overhead.  Not including our projects, current fixed costs and donations are below.  Obviously we need your donations of money and time to meet the growing needs of the community.
+
+    <h3>Annual fixed expenses total: $28,060</h3>
+    <ul>
+      <li>$2,050 monthly rent and utilities</li>
+      <li>$230 monthly internet</li>
+      <li>$350 yearly accounting fees</li>
+      <li>$350 yearly insurance</li>
+    </ul>
+    <h3>[Average] Annual donation income: $27,400</h3>
+    <ul>
+      <li>$10,000 yearly DC801 donation</li>
+      <li>$1,450 monthly recurring donations</li>
+    </ul>
+    <p>As a [pending] public 501(c)(3) all yearly IRS 990 forms are public record.</p>
+
+    <h3>How can I donate?</h3>
+    <ol>
+      <li>We accept one-time and recurring financial donations.</li>
+      <li>We accept donations of equipment and/or software.  Please contact our board@801labs.org</li>
+      <li>Ask your employer if they have or would be interested in “corporate matching gifts”.  This is a type of philanthropy in which companies financially match donations that their employees make to nonprofit organizations.</li>
+    </ol>
     </div>
       </div>
     </div>
