--- a/content/location-and-hours.html
+++ b/content/location-and-hours.html
@@ -60,7 +60,7 @@ weight: 300
               <h3 class="title is-3">Parking</h3>
               <p>Street parking is plentiful in the area, however lot parking is limited (Yellow highlighting in the picture).</p>
               <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/640x480.png">
+                <img src="/img/parking.png">
               </figure>
             </div>
           </div>
