--- a/content/events.html
+++ b/content/events.html
@@ -14,9 +14,11 @@ weight: 200
     <section class="section">
       <div class="columns">
         <div class="column">
-          <div class="cal-container">
-            <img src="/img/calblocks.png" alt="calblocks">
-          </div>
+          <a href="https://www.meetup.com/801labs/" class="button is-danger link">
+            Go to Meetup page
+          </a>
+          <br><br>
+          <div id="calBlocks" class="cal-container"></div>
         </div>
         <div class="column">
           <div class="content">
