paypal links and favicon

--- a/content/get-involved.html
+++ b/content/get-involved.html
@@ -40,7 +40,7 @@ weight: 500
     <h1 class="title">4. Volunteer!</h1>
     <p>What you know and do is interesting to us, come and share it with others. We are always looking for presenters.</p>
 
-    <h1 class="title">5. <a href="#">
+    <h1 class="title">5. <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website'>
       <span class="icon is-medium">
         <i class="fab fa-paypal"></i>
       </span>
@@ -57,7 +57,7 @@ weight: 500
     <section class="section has-text-centered">
       <div class="content">
         <h1 class="title">FAQs: Volunteer + Donate</h1>
-        <p><a href="#">
+        <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
           <span class="icon is-medium">
             <i class="fab fa-paypal"></i>
           </span>
