--- a/content/location-and-hours.html
+++ b/content/location-and-hours.html
@@ -25,18 +25,20 @@ weight: 300
               <p>Ask on our Slack Channel or check our social media for changes</p>
               <b>Other</b>
               <p>We are open to the public whenever our key list volunteers are available to run the space. Again, ask on our Slack Channel.</p>
-              <a href="https://slack.801labs.org" class="button is-black is-outlined">
-                <span class="icon">
-                  <i class="fab fa-slack"></i>
-                </span>
-                <span>Join Slack</span>
-              </a>
-              <a href="https://www.meetup.com/801labs/" class="button is-danger is-outlined">
-                <span class="icon">
-                  <i class="fab fa-meetup"></i>
-                </span>
-                <span>Meetup with us</span>
-              </a>
+              <div class="buttons">
+                <a href="https://slack.801labs.org" class="button is-black is-outlined">
+                  <span class="icon">
+                    <i class="fab fa-slack"></i>
+                  </span>
+                  <span>Join Slack</span>
+                </a>
+                <a href="https://www.meetup.com/801labs/" class="button is-danger is-outlined">
+                  <span class="icon">
+                    <i class="fab fa-meetup"></i>
+                  </span>
+                  <span>Meetup with us</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
