--- a/content/resources.html
+++ b/content/resources.html
@@ -38,7 +38,7 @@ weight: 400
         <div class="content">
           <h4 class="title is-4">We have tools for people learning how to hack things.  Some of those tools are for fabrication and prototyping, however this is NOT our primary focus.  If fabrication, prototyping, and/or production is your primary motivation, you should also check out Make SLC.</h4>
           <figure class="image is-4by3">
-            <img src="https://pbs.twimg.com/media/CvWM-IZUAAE5qDr.jpg">
+            <img src="/img/B4D-TpcCcAAtGvk.jpg">
           </figure>
         </div>
       </div>
