fixed width exceeding screen on mobile

--- a/content/_index.html
+++ b/content/_index.html
@@ -26,7 +26,9 @@ draft: false
       <h1 class="title has-text-centered">Location and Hours</h1>
       <div class="columns">
         <div class="column">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.848712761411!2d-111.88284848477637!3d40.76535207932606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f572ad542573%3A0xdd96640329b3d2cb!2s353%20E%20200%20S%20Suite%20%23B%2C%20Salt%20Lake%20City%2C%20UT%2084111!5e0!3m2!1sen!2sus!4v1575941669213!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <div class="google-maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.848712761411!2d-111.88284848477637!3d40.76535207932606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f572ad542573%3A0xdd96640329b3d2cb!2s353%20E%20200%20S%20Suite%20%23B%2C%20Salt%20Lake%20City%2C%20UT%2084111!5e0!3m2!1sen!2sus!4v1575941669213!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
         </div>
         <div class="column">
           <div class="content">
