--- a/content/resources.html
+++ b/content/resources.html
@@ -12,6 +12,7 @@ weight: 400
       </div>
     </section>
 
+<section class="section">
     <div class="columns">
       <div class="column has-text-right">
         <h3 class="title is-3">Equipment and Tools</h3>
@@ -43,3 +44,4 @@ weight: 400
         </div>
       </div>
     </div>
+</section>
