--- a/content/get-involved.html
+++ b/content/get-involved.html
@@ -67,6 +67,7 @@ weight: 500
       </div>
     </section>
 
+<section class="section">
     <div class="columns">
       <div class="column has-text-right">
         <div class="content">
@@ -116,3 +117,4 @@ weight: 500
     </div>
       </div>
     </div>
+</section>
