switch to volunteer

--- a/content/_index.html
+++ b/content/_index.html
@@ -58,7 +58,7 @@ draft: false
   One Time Through PayPal
 </a> | Subscribe | Stuff | Classes | Marketing | More</p>
 
-<a href="/get-involved/" class="button is-dark">
+<a href="{{< ref "/volunteer" >}}" class="button is-dark">
   <span>Learn how to contribute :)</span>
 </a>
 
