--- a/content/_index.html
+++ b/content/_index.html
@@ -9,7 +9,7 @@ draft: false
     <div class="column">
       <div class="content">
         <h1 class="title">What is 801 Labs?</h1>
-        <p>801 Labs is a Salt Lake City based hackerspace created by local information technology, electronics, and information security enthusiasts. 801 Labs is a physical space designed to be a center for peer learning and knowledge sharing in the form of workshops, presentations, and lectures. We also offer regular social activities to the community, where people can gather to work on their own projects, exchange ideas, and learn from each other. Since 801 Labs is intended to be a shared community resource, almost all of our events are free and open to the public.</p>
+        <p>801 Labs is a Salt Lake City based hackerspace created by local information technology, electronics, and information security enthusiasts. 801 Labs is a physical space designed to be a center for peer learning and knowledge sharing in the form of workshops, presentations, and lectures. We also offer regular activities to the community, where people can gather to work on their own projects, exchange ideas, and learn from each other. Since 801 Labs is intended to be a shared community resource, almost all of our events are free and open to the public.</p>
       </div>
     </div>
     <div class="column">
