--- a/content/events.html
+++ b/content/events.html
@@ -43,7 +43,7 @@ weight: 200
             </a>
 
             <h3>Do I need to donate or have a membership to participate?</h3>
-            <p>No! The space is open to the public and run entirely by volunteers. Our operating costs are covered entirely by voluntary donations and recurring subscription payments, but no activities or responsibilities at the space are contingent upon receipt of donations. If you’d like to attend events or get involved around the space, you are encouraged to do so.</p>
+            <p>No! The space is open to the public and run entirely by volunteers. Our operating costs are covered entirely by voluntary donations and recurring patronage, but no activities or responsibilities at the space are contingent upon receipt of donations. If you’d like to attend events or get involved around the space, you are encouraged to do so.</p>
 
             <h3>I would like to request a topic be covered in a class, what should I do?</h3>
             <p>We’ve got a form on our get involved page for just this occasion. If you let us know what you’re looking for, we can ask among the community if there is anyone who would like to teach a class on a specific topic. If there is interest in a topic, we will do our best to find someone qualified to teach about it, but we may not be able to make every request into a class.</p>
