--- a/content/events.html
+++ b/content/events.html
@@ -14,16 +14,12 @@ weight: 200
     <section class="section">
       <div class="columns">
         <div class="column">
-          <a href="https://www.meetup.com/801labs/" class="button is-danger link">
-            Go to Meetup page
-          </a>
-          <br><br>
           <div id="calBlocks" class="cal-container"></div>
         </div>
         <div class="column">
           <div class="content">
             <h1>Event FAQs</h1>
-
+            <a href="https://www.meetup.com/801labs/" class="button is-danger link">Go to Meetup page</a>
             <h3>Are events open to the public?</h3>
             <p>Yes! 801 Labs is a community based hackerspace that was setup to provide a place for the community of Salt Lake City to meet about technology and host events. All of our events are open to the public.</p>
 
