--- a/content/volunteer.html
+++ b/content/volunteer.html
@@ -27,7 +27,7 @@ weight: 500
       Slack Channel
     </a> and ask questions</h1>
 
-    <h1 class="title">3. Checkout our <a href="https://www.meetup.com/801labs/">
+    <h1 class="title">3. Checkout our <a href="/events/">
       <span class="icon is-medium">
         <i class="fab fa-meetup"></i>
       </span>
