--- a/content/_index.html
+++ b/content/_index.html
@@ -49,7 +49,7 @@ draft: false
 
   <section class="section">
     <div class="content has-text-centered">
-      <h1 class="title">Get Involved By Volunteering Or Donating</h1>
+      <h1 class="title">Get Involved by Volunteering or Donating</h1>
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
   <span class="icon is-medium">
