remove more donate

--- a/content/_index.html
+++ b/content/_index.html
@@ -50,14 +50,14 @@ draft: false
 
   <section class="section">
     <div class="content has-text-centered">
-      <h1 class="title">Get Involved by Volunteering or Donating</h1>
+      <h1 class="title">Get Involved by Volunteering<!-- or Donating--></h1>
 
-<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
+<p><!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
   <span class="icon is-medium">
     <i class="fab fa-paypal"></i>
   </span>
   One Time Through PayPal
-</a> | Subscribe | Stuff | Classes | Marketing | More</p>
+</a> |--> Subscribe | Stuff | Classes | Marketing | More</p>
 
 <a href="{{< ref "/volunteer" >}}" class="button is-dark">
   <span>Learn how to contribute :)</span>
