last donate removal?

--- a/content/volunteer.html
+++ b/content/volunteer.html
@@ -40,7 +40,7 @@ weight: 500
     <h1 class="title">4. Volunteer!</h1>
     <p>What you know and do is interesting to us, come and share it with others. We are always looking for presenters.</p>
 
-    <h1 class="title">5. <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website'>
+    <!--<h1 class="title">5. <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website'>
       <span class="icon is-medium">
         <i class="fab fa-paypal"></i>
       </span>
@@ -48,7 +48,7 @@ weight: 500
     </a>!</h1>
     <div class="content">
       <p>Whether you use the space or not, support your local hackerspace community.</p>
-    </div>
+    </div>-->
   </div>
 </section>
 
@@ -56,13 +56,13 @@ weight: 500
 
     <section class="section has-text-centered">
       <div class="content">
-        <h1 class="title">FAQs: Volunteer + Donate</h1>
-        <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
+        <h1 class="title">FAQs: Volunteer<!-- + Donate--></h1>
+        <p><!--<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website">
           <span class="icon is-medium">
             <i class="fab fa-paypal"></i>
           </span>
           One Time Through PayPal
-        </a> | Subscribe | Stuff | Classes | Marketing | More</p>
+        </a> |--> Subscribe | Stuff | Classes | Marketing | More</p>
         <p>Regardless if you use the space or not, thank you for supporting your local hacker community.</p>
       </div>
     </section>
@@ -91,7 +91,7 @@ weight: 500
       </div>
       <div class="column has-text-left">
         <div class="content">
-        <h3>What happens to financial donations?</h3>
+        <!--<h3>What happens to financial donations?</h3>
     Because 801labs is a 100% volunteer run organization, there is very little administrative overhead.  Not including our projects, current fixed costs and donations are below.  Obviously we need your donations of money and time to meet the growing needs of the community.
 
     <h3>Annual fixed expenses total: $28,060</h3>
@@ -113,7 +113,7 @@ weight: 500
       <li>We accept one-time and recurring financial donations.</li>
       <li>We accept donations of equipment and/or software.  Please contact our board@801labs.org</li>
       <li>Ask your employer if they have or would be interested in “corporate matching gifts”.  This is a type of philanthropy in which companies financially match donations that their employees make to nonprofit organizations.</li>
-    </ol>
+    </ol>-->
     </div>
       </div>
     </div>
