--- a/content/contact.html
+++ b/content/contact.html
@@ -15,9 +15,9 @@ weight: 600
       <div class="content">
         <p>board@801labs.org</p>
         <p>353 East 200 South Suite #B, Salt Lake City, UT 84111</p>
-        <a href="https://slack.801labs.org">
+        <a href="https://discord.gg/uSQdUPt">
           <span class="icon is-medium">
-            <i class="fab fa-slack"></i>
+            <i class="fab fa-discord"></i>
           </span>
           Slack Chat
         </a>
