--- a/content/contact.html
+++ b/content/contact.html
@@ -19,7 +19,7 @@ weight: 600
           <span class="icon is-medium">
             <i class="fab fa-discord"></i>
           </span>
-          Slack Chat
+          Discord Chat
         </a>
       </div>
     </section>
