Issue #30: Remove Slack from the website, replace with Discord

--- a/content/about.html
+++ b/content/about.html
@@ -27,7 +27,7 @@ weight: 100
 
           <img ALIGN="right" width="300px" style="margin:50px" src="/img/B-QWbieCIAAz-BX.jpg">
           <h1 id="people" class="title">People</h1>
-          <p>Our organization is run by volunteers from the general public. The specific people involved are all listed on our getting involved page as members of committees that are responsible for the day-to-day operation of the space. Since many of our members are part of the infosec community, they don’t generally like to provide a lot of personal information online. You’ll notice most of the names of committee members are actually online aliases that they use in place of personally identifying information. If you want to get to know us, the best way to to talk with us on Slack, or to come down to the space for some events and say hello.</p>
+          <p>Our organization is run by volunteers from the general public. The specific people involved are all listed on our getting involved page as members of committees that are responsible for the day-to-day operation of the space. Since many of our members are part of the infosec community, they don’t generally like to provide a lot of personal information online. You’ll notice most of the names of committee members are actually online aliases that they use in place of personally identifying information. If you want to get to know us, the best way to to talk with us on Discord, or to come down to the space for some events and say hello.</p>
         </div>
       </div>
     </section>
