--- a/content/location-and-hours.html
+++ b/content/location-and-hours.html
@@ -24,15 +24,15 @@ weight: 300
             <div class="content">
               <h4 class="title is-4">Tuesday and Thursdays from 5:00 PM to 10:00 PM</h4>
               <b>Holiday Hours</b>
-              <p>Ask on our Slack Channel or check our social media for changes</p>
+              <p>Ask on our Discord Server or check our social media for changes</p>
               <b>Other</b>
-              <p>We are open to the public whenever our key list volunteers are available to run the space. Again, ask on our Slack Channel.</p>
+              <p>We are open to the public whenever our key list volunteers are available to run the space. Again, ask on our Discord Server.</p>
               <div class="buttons">
-                <a href="https://slack.801labs.org" class="button is-black is-outlined">
+                <a href="https://discord.gg/uSQdUPt" class="button is-black is-outlined">
                   <span class="icon">
-                    <i class="fab fa-slack"></i>
+                    <i class="fab fa-discord"></i>
                   </span>
-                  <span>Join Slack</span>
+                  <span>Join Discord</span>
                 </a>
                 <a href="https://www.meetup.com/801labs/" class="button is-danger is-outlined">
                   <span class="icon">
