--- a/content/volunteer.html
+++ b/content/volunteer.html
@@ -20,11 +20,11 @@ weight: 500
       {{< socials >}}
     </div>
 
-    <h1 class="title">2. Join our <a href="https://slack.801labs.org">
+    <h1 class="title">2. Join our <a href="https://discord.com/invite/uSQdUPt">
       <span class="icon is-medium">
-        <i class="fab fa-slack"></i>
+        <i class="fab fa-discord"></i>
       </span>
-      Slack Channel
+      Discord Server
     </a> and ask questions</h1>
 
     <h1 class="title">3. Checkout our <a href="/events/">
@@ -74,7 +74,7 @@ weight: 500
           <h3>What can I do to help at the space?</h3>
       Answer: We have a list of ongoing projects to improve the space on our get involved page. If there’s a project you would like to participate in to make the hackerspace better, please contact the committee volunteers listed under that project to see what you can do.
   <h3>I would like to teach a class, what should I do?</h3>
-      Answer: You can reach out to us on slack and let us know, or you can use the forms on the get involved page to submit your class idea so we can make it happen. We’re always looking for more people who would like to teach classes or run events.
+      Answer: You can reach out to us on Discord and let us know, or you can use the forms on the get involved page to submit your class idea so we can make it happen. We’re always looking for more people who would like to teach classes or run events.
   <h3>Your website looks like a pile of garbage. Can I update it to make it better?</h3>
       Answer: Our website source code is freely available on GitHub for anyone to fork, edit, and submit a pull request. If you’d like to see something new or different on the website, feel free to submit changes for review by the volunteers who maintain it.
   <h3>What are the responsibilities of key holding volunteers?</h3>
