Issue #30: Remove Slack from the website, replace with Discord

--- a/content/events.html
+++ b/content/events.html
@@ -24,10 +24,10 @@ weight: 200
             <p>Yes! 801 Labs is a community based hackerspace that was setup to provide a place for the community of Salt Lake City to meet about technology and host events. All of our events are open to the public.</p>
 
             <h3>Are events free?</h3>
-            <p>All of our events are open to the public, most are free, some are paid.  We always accept and encourage donations.  Some classes may charge a fee to cover material costs, if stated on the event’s meetup page.  There will often be an option to attend the class and bring your own materials or just observing the class without building something.  Contact the presenter on our Slack channel if you have questions.</p>
+            <p>All of our events are open to the public, most are free, some are paid.  We always accept and encourage donations.  Some classes may charge a fee to cover material costs, if stated on the event’s meetup page.  There will often be an option to attend the class and bring your own materials or just observing the class without building something.  Contact the presenter on our Discord server if you have questions.</p>
 
             <h3>I can’t make or I missed an event, are they recorded?</h3>
-            <p>Yes! Most of our classes are archived on our youtube channel. Upon request a live stream may be possible, contact the presenter on our Slack channel for details.</p>
+            <p>Yes! Most of our classes are archived on our youtube channel. Upon request a live stream may be possible, contact the presenter on our Discord server for details.</p>
 
             <h3>Do I need a membership?</h3>
             <p>No, there is no membership.  However we do accept and encourage donations!  801 Labs is a community based hackerspace that was setup to provide a place for the community of Salt Lake City to meet about technology and host events.</p>
