--- a/content/_index.html
+++ b/content/_index.html
@@ -36,9 +36,9 @@ draft: false
             <p style="text-decoration:line-through">Tuesday and Thursdays from 5:00 PM to 10:00 PM</p>
             <p>COVID-19 has forced 801 Labs to temporarily change our physical policy. We will be closed until <b>further notice</b>. <a href="https://www.801labs.org/files/March16-PublicNotice.pdf">Learn more</a></p>
             <h4 class="title is-4">Holiday Hours</h4>
-            <p>Ask on our Slack Channel or check our social media for changes</p>
+            <p>Ask on our Discord Server or check our social media for changes</p>
             <b>Other</b>
-            <p>We are open to the public whenever our key list volunteers are available to run the space. Again, ask on our Slack Channel.</p>
+            <p>We are open to the public whenever our key list volunteers are available to run the space. Again, ask on our Discord Server.</p>
           </div>
           <a href="/location-and-hours/" class="button is-black is-outlined">
             <span>Visit us!</span>
